refactor: remove unused imports and clean up code in various classes